# wago-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: data.lua
tests/: test_wago_extractor.py
wago_extractor/: __init__.py  cli.py  core.py  models.py
